resolve: Mixed content issue3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="mmj">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="google-signin-client_id" content="607080941369-2gr16a186se6hg0bjsltninaa37eq375.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
@@ -35,7 +36,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1732999114";
+    var serviceWorkerVersion = "3510473381";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
